Tilføjet frontpage med styling
Har lavet front page og starten af en intro til mig, samt lavet en pil som viser videre til mine projekter

--- a/index.html
+++ b/index.html
@@ -10,6 +10,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <section>
+    <h1>Casper Reedtz Andersen</h1>
+    <h2 class="h2intro">Coding is passion</h2>
+    <h3 class="h3intro">Student @ Zealand</h3>
+
+    <img class="imgme"src="images/me.jpg" alt="Casper">
+</section>
+    <h2 class="h2who">Who am I?</h2>
+    <div class="borderwhobot"></div>
+    <div class="borderwhoright"></div>
+    <p class="pwho">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying multimedia design and communication.</p>
+    <a class="expand" href="javascript:void(0)">Expand</a>
+
+    <section class="projectsintro">
+        <h2>Projects</h2> <div><img src="images/arrowsouth.svg" alt=""></div>
+    </section>
+
 </body>
 </html>
