TIlføjet Xenos projekt til forside

--- a/index.html
+++ b/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casper Reedtz Andersen - Portfolio</title>
     <meta name="description" content="A portfolio of Casper Reedtz Andersen's previous works and projects">
-    <meta name="keywords" content="Casper, Reedtz, Andersen, Portfolio, Xenos, Rhythm Studio, The Swinging Shoes, Danish, Dansk, English, Engelsk, Student">
+    <meta name="keywords"
+        content="Casper, Reedtz, Andersen, Portfolio, Xenos, Rhythm Studio, The Swinging Shoes, Danish, Dansk, English, Engelsk, Student">
     <meta name="author" content="Casper Reedtz Andersen">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <section>
-    <h1>Casper Reedtz Andersen</h1>
-    <h2 class="h2intro">Coding is passion</h2>
-    <h3 class="h3intro">Student @ Zealand</h3>
+        <h1>Casper Reedtz Andersen</h1>
+        <h2 class="h2intro">Coding is passion</h2>
+        <h3 class="h3intro">Student @ Zealand</h3>
 
-    <img class="imgme"src="images/me.jpg" alt="Casper">
-</section>
+        <img class="imgme" src="images/me.jpg" alt="Casper">
+    </section>
     <h2 class="h2who">Who am I?</h2>
     <div class="borderwhobot"></div>
     <div class="borderwhoright"></div>
-    <p class="pwho">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying multimedia design and communication.</p>
+    <p class="pwho">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying multimedia design and
+        communication.</p>
     <a class="expand" href="javascript:void(0)">Expand</a>
 
     <section class="projectsintro">
-        <h2>Projects</h2> <div><img src="images/arrowsouth.svg" alt=""></div>
+        <h2>Projects</h2>
+        <div>
+            <img src="images/arrowsouth.svg" alt="">
+        </div>
+    </section>
+
+    <section class="projectgrid">
+        <div class="project">
+            <h2>Xenos</h2>
+            <h3>Car Project - Mobile & Desktop</h3>
+            <h3>Ended late November 2020</h3>
+            <img src="images/xenoshomeimgdesk.png" alt="home page of Xenos car project">
+            <a href="xenos.html">More about Xenos here</a>
+        </div>
+        <div class="project"></div>
+        <div class="project"></div>
+        <div class="project"></div>
     </section>
 
 </body>
+
 </html>
