--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 
 <head>
     <meta charset="UTF-8">
@@ -21,11 +21,12 @@
         <img class="imgme" src="images/me.jpg" alt="Casper">
     </section>
     <h2 class="h2who">Who am I?</h2>
-    <div class="borderwhobot"></div>
-    <div class="borderwhoright"></div>
-    <p class="pwho">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying multimedia design and
-        communication.</p>
-    <a class="expand" href="javascript:void(0)">Expand</a>
+    <div class="borderwhobot" id="borderbot"></div>
+    <div class="borderwhoright" id="borderright"></div>
+    <p class="pwho" id="pwhoid">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying multimedia
+        design & communication.</p>
+    <a class="expand" id="pwhoidexpand" href="javascript:void(0)" onclick="expandpwho()">Expand</a>
+    <a class="shorten" id="pwhoidshorten" href="javascript:void(0)" onclick="shortenpwho()">Shorten</a>
 
     <section class="projectsintro">
         <h2>Projects</h2>
@@ -39,14 +40,36 @@
             <h2>Xenos</h2>
             <h3>Car Project - Mobile & Desktop</h3>
             <h3>Ended late November 2020</h3>
-            <img src="images/xenoshomeimgdesk.png" alt="home page of Xenos car project">
+            <img src="images/xenoshomeimgdesk.png" alt="Home page of Xenos car project">
             <a href="xenos.html">More about Xenos here</a>
         </div>
-        <div class="project"></div>
-        <div class="project"></div>
-        <div class="project"></div>
+        <div class="project">
+            <h2>Rhythm Studio</h2>
+            <h3>Dance Project - Mobile & Desktop</h3>
+            <h3>Ended late October 2020</h3>
+            <img src="images/bollyimg.png" alt="Page for registration on a bollywood site">
+            <a href="rhythm.html">More about Rhythm Studio here</a>
+        </div>
+        <div class="project">
+            <h2>The Swinging Shoes</h2>
+            <h3>Dance Project - Mobile only</h3>
+            <h3>Ended late September 2020</h3>
+            <img src="images/swing.png" alt="">
+            <a href="swing.html">More about The Swinging Shoes here</a>
+        </div>
+        <div class="project">
+            <h2>Outer Travels</h2>
+            <h3>Space Project - Desktop only</h3>
+            <h3>Ended early September 2020</h3>
+            <img src="images/space.png" alt="">
+            <a href="space.html">More about Outer Travels here</a>
+        </div>
     </section>
 
+    <section>
+        <a class="tostart" href="#top">Back to start</a>
+    </section>
+    <script src="myjs.js"></script>
 </body>
 
 </html>
