Tilføjet start af Xenos siden og fundet baggrundsbillede til hovedside

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body class="bimg">
     <section>
         <h1>Casper Reedtz Andersen</h1>
         <h2 class="h2intro">Coding is passion</h2>
@@ -31,7 +31,7 @@
     <section class="projectsintro">
         <h2>Projects</h2>
         <div>
-            <img src="images/arrowsouth.svg" alt="">
+            <img src="images/arrowsouth.svg" alt="arrow pointing down">
         </div>
     </section>
 
