Kodet Xenos siden til mobil, startet Rhythm siden

--- a/xenos.html
+++ b/xenos.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Xenos - Car Project</title>
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <a href="index.html"><img class="arrowback"src="images/arrowwest.svg" alt=""></a>
+    <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
     <h1>Xenos</h1>
     <section class="xenosintro">
         <h2 class="xenosh2">Car Project</h2>
         <h3 class="xenosh3">For mobile and desktop</h3>
-        <p></p>
+        <p>Xenos was created in 2 parts, first a mobile version based on a target group which we had to pick ourselves.
+            After picking we then designed and created the website for mobile at first and had a showcase to recieve
+            feedback from our work.</p>
+        <img src="/images/xenosmobile1.png" alt="xenos mobile pages part 1">
     </section>
+    <section class="xenosintro">
+        <p>
+            After the showcase from part 1, we had a second part, which involved a reevaluating of the good and bad, based on feedback we got. <br> Part 2 also was about making the website more responsive which also meant we had to make it for desktop as well. 
+        </p>
+        <img src="/images/xenosmobile2.png" alt="xenos mobile pages part 2">
+        <img src="/images/xenoskampimg.png" alt="xenos final page">
+        <p class="pfinal">To finish of the project we had a final showcase showing our new content for the website and the changes made in the 2nd part. </p>
+    </section>
+
+    <a href="index.html" class="tostart">Back to start</a>
 </body>
+
 </html>
