Alle projekt sider er lavet + animation til overskrifter

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="bimg">
     <section>
-        <h1>Casper Reedtz Andersen</h1>
+        <h1 class="ml12">Casper Reedtz Andersen</h1>
         <h2 class="h2intro">Coding is passion</h2>
         <h3 class="h3intro">Student @ Zealand</h3>
 
@@ -47,7 +47,7 @@
             <h2>Rhythm Studio</h2>
             <h3>Dance Project - Mobile & Desktop</h3>
             <h3>Ended late October 2020</h3>
-            <img src="images/bollyimg.png" alt="Page for registration on a bollywood site">
+            <img src="images/rhythmdesk2.png" alt="Page for registration on a bollywood site">
             <a href="rhythm.html">More about Rhythm Studio here</a>
         </div>
         <div class="project">
@@ -69,6 +69,7 @@
     <section>
         <a class="tostart" href="#top">Back to start</a>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="myjs.js"></script>
 </body>
 
