Forside lavet til 1080p

--- a/index.html
+++ b/index.html
@@ -13,23 +13,27 @@
 </head>
 
 <body class="bimg">
-
-        <h1 class="ml12">Casper Reedtz Andersen</h1>
-        <h2 class="h2intro">Coding is passion</h2>
-        <h3 class="h3intro">Student @ Zealand</h3>
+<div id="backgroundelement"></div>
+    <h1 class="ml12">Casper Reedtz Andersen</h1>
+    <h2 class="h2intro">Coding is passion</h2>
+    <h3 class="h3intro">Student @ Zealand</h3>
     <section>
         <img class="imgme" src="images/me.jpg" alt="Casper">
     </section>
     <section class="whoami">
-    <h2 class="h2who">Who am I?</h2>
-    <div class="borderwhobot" id="borderbot"></div>
-    <div class="borderwhoright" id="borderright"></div>
-    <p class="pwho" id="pwhoid">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying multimedia
-        design & communication.</p>
-        <p class="pwho" id="pwhodeskid">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying multimedia design & communication. <br> <br> I live in Slagelse with my girlfriend and I currently work at Coop Danmark in Albertslund, as a front office assisent to support myself financially while i study. <br> <br> After I'm done studying multimedia, I'm gonna continue studying web development as I'm currently working towards becoming a great web dev.</p>
-    <a class="expand" id="pwhoidexpand" href="javascript:void(0)" onclick="expandpwho()">Expand</a>
-    <a class="shorten" id="pwhoidshorten" href="javascript:void(0)" onclick="shortenpwho()">Shorten</a>
-</section>
+        <h2 class="h2who">Who am I?</h2>
+        <div class="borderwhobot" id="borderbot"></div>
+        <div class="borderwhoright" id="borderright"></div>
+        <p class="pwho" id="pwhoid">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying multimedia
+            design & communication.</p>
+        <p class="pwho" id="pwhodeskid">Hey! I'm Casper and I'm a student at Zealand Academy, currently studying
+            multimedia design & communication. <br> <br> I live in Slagelse with my girlfriend and I currently work at
+            Coop Danmark in Albertslund, as a front office assisent to support myself financially while i study. <br>
+            <br> After I'm done studying multimedia, I'll continue studying web development, as my current goal
+             is becomming a great web developer.</p>
+        <a class="expand" id="pwhoidexpand" href="javascript:void(0)" onclick="expandpwho()">Expand</a>
+        <a class="shorten" id="pwhoidshorten" href="javascript:void(0)" onclick="shortenpwho()">Shorten</a>
+    </section>
 
     <section class="projectsintro">
         <h2>Projects</h2>
