Lavet Xenos side til desktop, begyndt at lave rhythm side

--- a/rhythm.html
+++ b/rhythm.html
@@ -12,15 +12,15 @@
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
     <h1 class="projecth1 ml12">Rhythm Studio</h1>
     <section class="projectsection">
-        <h2 class="xenosh2">Dance Project</h2>
-        <h3 class="xenosh3">For mobile and desktop</h3>
+        <h2 class="projecth2">Dance Project</h2>
+        <h3 class="projecth3">For mobile and desktop</h3>
         <p>In this project, we had to make a website for a bollywood dance studio, this was a bit different from
             previous
             projects as we received a website from another group, which we then had to improve upon. <br> <br> The website we
             received wasn't up to par with our vision for what a bollywood website should look like, so we ended up
             making a new one from scratch to have a clear design and
             consistency over our several pages.</p>
-        <img src="/images/rhythmmobile1.png" alt="rhythm mobile pages part 1">
+        <img class="rhythmimg1" src="/images/rhythmmobile1.png" alt="rhythm mobile pages part 1">
     </section>
     <section class="projectsection">
         <p>After doing research on the bollywood dance we started looking into creating a moodboard as a sort of "design
@@ -31,7 +31,7 @@
         <p>We started coding our website, mobile first, with these design decisions in mind. After being done with the
             mobile version we made breakpoints to further develop the website for dekstop users. As usual we had a final
             showcase to show of our work.</p>
-        <img src="/images/rhythmdesk2.png" alt="rhythm desktop page">
+        <img class="rhythmimg2" src="/images/rhythmdesk2.png" alt="rhythm desktop page">
     </section>
     <a class="tostart" href="index.html">Back to start</a>
 
