--- a/space.html
+++ b/space.html
@@ -12,8 +12,8 @@
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
     <h1 class="projecth1 ml12">Outer Travels</h1>
     <section class="projectsection">
-        <h2 class="xenosh2">Space Project</h2>
-        <h3 class="xenosh3">For desktop only</h3>
+        <h2 class="projecth2">Space Project</h2>
+        <h3 class="projecth3">For desktop only</h3>
         <p>As our first project, Outer Travels was a space themed project, where we had to make a website around some company, that had a product centered around space.</p>
         <img src="/images/space.png" alt="space outertravels home page">
     </section>
