--- a/swing.html
+++ b/swing.html
@@ -12,8 +12,8 @@
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
     <h1 class="projecth1 ml12">The Swinging <br> Shoes</h1>
     <section class="projectsection">
-        <h2 class="xenosh2">Dance Project</h2>
-        <h3 class="xenosh3">For mobile only</h3>
+        <h2 class="projecth2">Dance Project</h2>
+        <h3 class="projecth3">For mobile only</h3>
         <p>As this project was our second project ever, it was all about learning how to make a mobile website. Our project this time was about a swingdance dance studio. <br> <br> We started off by making desk research and found a little dance school in copenhagen named "Happy Feet", we visited them and got a feel for what swingdancing was all about and then got to work. </p>
         <img src="/images/swingdesign.png" alt="swing design phase 1">
     </section>
