--- a/xenos.html
+++ b/xenos.html
@@ -12,26 +12,31 @@
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
     <h1 class="projecth1 ml12">Xenos</h1>
     <section class="projectsection">
-        <h2 class="xenosh2">Car Project</h2>
-        <h3 class="xenosh3">For mobile and desktop</h3>
-        <p>Xenos was a project about makíng a car brand and then designing a website for it, it was created in 2 parts, we started by making a mobile version based on the target group our brand used which we picked ourselves.
+        <h2 class="projecth2">Car Project</h2>
+        <h3 class="projecth3">For mobile and desktop</h3>
+        <p class="xenosp1">Xenos was a project about makíng a car brand and then designing a website for it, it was created in 2 parts, we started by making a mobile version based on the target group our brand used which we picked ourselves.
           <br> <br> After researching, designing and making the website for mobile, we held a showcase, presenting our work. </p>
-        <img src="/images/xenosmobile1.png" alt="xenos mobile pages part 1">
+        <img class="xenosimg1" src="/images/xenosmobile1.png" alt="xenos mobile pages part 1">
     </section>
     <section class="projectsection">
-        <p>
+        <p class="xenosp2">
             After the showcase from part 1, we had a second part, which involved a reevaluating of the good and bad from our previous brand and design,
-            based on feedback we got. <br> Part 2 also was about making the website more responsive which also meant we
+            based on feedback we got. <br> <br> Part 2 also was about making the website more responsive which also meant we
             had to make it for desktop as well.
         </p>
-        <img src="/images/xenosmobile2.png" alt="xenos mobile pages part 2">
-        <img src="/images/xenoskampimg.png" alt="xenos final page">
+        <img class="xenosimg2"  src="/images/xenosmobile2.png" alt="xenos mobile pages part 2">
+        <img class="xenosimg3" src="/images/xenoskampimg.png" alt="xenos final page">
         <p class="pfinal">To finish of the project we had a final showcase showing our new content for the website and
             the changes made in the 2nd part. </p>
     </section>
 
     <a href="index.html" class="tostart">Back to start</a>
 
+    <section>
+        <div class="xenosbar1"></div>
+        <div class="xenosbar2"></div>
+        <div class="xenosbar3"></div>
+    </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="myjs.js"></script>
 </body>
