Restrukturering af content og deisgn på projektsider

--- a/xenos.html
+++ b/xenos.html
@@ -12,22 +12,52 @@
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
     <h1 class="projecth1 ml12">Xenos</h1>
     <section class="projectsection">
-        <h2 class="projecth2">Car Project</h2>
-        <h3 class="projecth3">For mobile and desktop</h3>
-        <p class="xenosp1">Xenos was a project about makíng a car brand and then designing a website for it, it was created in 2 parts, we started by making a mobile version based on the target group our brand used which we picked ourselves.
-          <br> <br> After researching, designing and making the website for mobile, we held a showcase, presenting our work. </p>
+        <h2 class="projecth2">Car Brand Project</h2>
+        <h3 class="projecth3">Brand identity, Content Manangement & Coding</h3>
+        <h4 class="projecth4">Made for mobile and desktop</h4>
+        <p class="xenosp1">Xenos was a <b>2 part project</b> about making a car brand and website for it, <b>the first
+                part</b>
+            consisted of us <b>making a brand, design, website for mobile</b> and starting to <b>focus on the business
+                part of our
+                projects.</b>
+            <br>
+            <b>The Second part</b> was more so a continuation of some feedback and to <b>further develop the concept of
+                Xenos</b> with more content.
+            <br> <br>
+            <b>My main role</b> for the first part of this project was being responsible for <b>finding a brand identity
+                and
+                the customers that would interact with it.</b>
+
+            <br> <br> To start the project of, we did a lot of research about different car brands, to find what kind of
+            <b>identity</b> we wanted. We ended on being a brand leaning towards being more of <b> a trust worthy,
+                electric mass
+                market car company,</b> with our main customer segments being people that are either, <b>
+                environmentally conscious, craftsmen or early to middle aged family parrents.</b></p>
+        <img class="xenosmood" src="/images/xenosmoodboard.png" alt="moodboard from xenos">
+        <div class="xenosbar"></div>
+        <p>Now that we had a clear vision of what our brand should include, we started on our design and after settling
+            down on a more neutral look, we began sketching, wireframing, making mockups and finally coding. <br> <br>
+            In the coding part I was responsible for creating a website for craftsmen and making our pullout menu to
+            connect all of our webpages together.</p>
         <img class="xenosimg1" src="/images/xenosmobile1.png" alt="xenos mobile pages part 1">
     </section>
     <section class="projectsection">
         <p class="xenosp2">
-            After the showcase from part 1, we had a second part, which involved a reevaluating of the good and bad from our previous brand and design,
-            based on feedback we got. <br> <br> Part 2 also was about making the website more responsive which also meant we
-            had to make it for desktop as well.
+            We then had a showcase of our work from part 1 and after getting feedback, it was back to the drawingboard
+            to begin part 2.
+            <br> <br> In part 2 I was responsible for making our contentplan, deciding on what kind of content should be
+            put out for our customers, here I created a webpage with the current campaigns from Xenos on it. Updated the
+            menu and some other pages to have more cohesiveness.
+            <!-- After the showcase from part 1, we had a second part, which involved a reevaluating of the good and bad from
+            our previous brand and design,
+            based on feedback we got. <br> <br> Part 2 also was about making the website more responsive which also
+            meant we
+            had to make it for desktop as well. -->
         </p>
-        <img class="xenosimg2"  src="/images/xenosmobile2.png" alt="xenos mobile pages part 2">
+        <img class="xenosimg2" src="/images/xenosmobile2.png" alt="xenos mobile pages part 2">
+        <p class="pfinal">Finally at the end we made the website responsive to desktop, where we added more whitespace
+            and could get a bit more creative with some of our design decisions.</p>
         <img class="xenosimg3" src="/images/xenoskampimg.png" alt="xenos final page">
-        <p class="pfinal">To finish of the project we had a final showcase showing our new content for the website and
-            the changes made in the 2nd part. </p>
     </section>
 
     <a href="index.html" class="tostart">Back to start</a>
