Xenos page fully designed

--- a/xenos.html
+++ b/xenos.html
@@ -15,7 +15,8 @@
         <h2 class="projecth2">Car Brand Project</h2>
         <h3 class="projecth3">Brand identity, Content Manangement & Coding</h3>
         <h4 class="projecth4">Made for mobile and desktop</h4>
-        <p class="xenosp1">Xenos was a <b>2 part project</b> about making a car brand and website for it, <b>the first
+        <p class="xenospintro">Xenos was a <b>2 part project</b> about making a car brand and website for it, <b>the
+                first
                 part</b>
             consisted of us <b>making a brand, design, website for mobile</b> and starting to <b>focus on the business
                 part of our
@@ -34,29 +35,33 @@
                 market car company,</b> with our main customer segments being people that are either, <b>
                 environmentally conscious, craftsmen or early to middle aged family parrents.</b></p>
         <img class="xenosmood" src="/images/xenosmoodboard.png" alt="moodboard from xenos">
-        <div class="xenosbar"></div>
-        <p>Now that we had a clear vision of what our brand should include, we started on our design and after settling
-            down on a more neutral look, we began sketching, wireframing, making mockups and finally coding. <br> <br>
-            In the coding part I was responsible for creating a website for craftsmen and making our pullout menu to
+    </section>
+    <div class="xenossplitbar"></div>
+    <div class="arrowcontinue">
+        <div>
+            <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
+        </div>
+    </div>
+    <section class="projectsection">
+        <p class="xenosp1">Now that we had a <b>clear vision</b> of what our brand should include, we started on our <b>design</b> and
+            after settling
+            down on a more neutral look, <b>we began sketching, wireframing, making mockups and finally coding.</b> <br> <br>
+            In the coding part, I was <b>responsible for</b> creating a <b>website for craftsmen and making our pullout menu</b> to
             connect all of our webpages together.</p>
         <img class="xenosimg1" src="/images/xenosmobile1.png" alt="xenos mobile pages part 1">
     </section>
     <section class="projectsection">
         <p class="xenosp2">
-            We then had a showcase of our work from part 1 and after getting feedback, it was back to the drawingboard
-            to begin part 2.
-            <br> <br> In part 2 I was responsible for making our contentplan, deciding on what kind of content should be
-            put out for our customers, here I created a webpage with the current campaigns from Xenos on it. Updated the
-            menu and some other pages to have more cohesiveness.
-            <!-- After the showcase from part 1, we had a second part, which involved a reevaluating of the good and bad from
-            our previous brand and design,
-            based on feedback we got. <br> <br> Part 2 also was about making the website more responsive which also
-            meant we
-            had to make it for desktop as well. -->
+            We then had a <b>showcase of our work from part 1</b> and after getting <b>feedback</b>, it was back to the drawingboard
+            to <b>begin part 2.</b>
+            <br> <br> In part 2 I was <b>responsible for making our contentplan,</b> deciding on what kind of content should be
+            put out for our customers, here <b>I created a webpage with the current campaigns Xenos was running</b>. Updated the
+            menu and did some <b>fixing on other pages to have more cohesiveness</b>.
         </p>
         <img class="xenosimg2" src="/images/xenosmobile2.png" alt="xenos mobile pages part 2">
-        <p class="pfinal">Finally at the end we made the website responsive to desktop, where we added more whitespace
-            and could get a bit more creative with some of our design decisions.</p>
+        <p class="xenosp3">Finally <b> at the end,</b> we made the website <b>responsive to desktop</b> where we added more <b>whitespace</b>
+            and tried to get a bit more <b>creative with</b> some of our <b>design decisions</b>. But ultimately, we had <b>more we could
+            improve upon</b> in our website design, to make it <b>more appealing to our target group and fix some errors.</b></p>
         <img class="xenosimg3" src="/images/xenoskampimg.png" alt="xenos final page">
     </section>
 
