Har lavet rettelser og gjort de sidste sider til klar til desktop

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body class="bimg">
 <div id="backgroundelement"></div>
     <h1 class="ml12">Casper Reedtz Andersen</h1>
-    <h2 class="h2intro">Coding is passion</h2>
+    <h2 class="h2intro">CReedtz1@gmail.com</h2>
     <h3 class="h3intro">Student @ Zealand</h3>
     <section>
         <img class="imgme" src="images/me.jpg" alt="Casper">
@@ -74,7 +74,7 @@
     </section>
 
     <section>
-        <a class="tostart" href="#top">Back to start</a>
+        <a class="tostart" href="#top">To the top</a>
     </section>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
