--- a/rhythm.html
+++ b/rhythm.html
@@ -12,25 +12,41 @@
     <a href="index.html"><img class="arrowback" src="images/arrowwest.svg" alt=""></a>
     <h1 class="projecth1 ml12">Rhythm Studio</h1>
     <section class="projectsection">
-        <h2 class="projecth2">Dance Project</h2>
-        <h3 class="projecth3">For mobile and desktop</h3>
-        <p>In this project, we had to make a website for a bollywood dance studio, this was a bit different from
-            previous
-            projects as we received a website from another group, which we then had to improve upon. <br> <br> The website we
-            received wasn't up to par with our vision for what a bollywood website should look like, so we ended up
-            making a new one from scratch to have a clear design and
-            consistency over our several pages.</p>
-        <img class="rhythmimg1" src="/images/rhythmmobile1.png" alt="rhythm mobile pages part 1">
-    </section>
-    <section class="projectsection">
-        <p>After doing research on the bollywood dance we started looking into creating a moodboard as a sort of "design
-            guide" for everyone on the team to follow.</p>
+        <h2 class="projecth2">Dance Project - Part 2</h2>
+        <h3 class="projecth3">Lead coder & Organizer</h3>
+        <h4 class="projecth4">For mobile and desktop</h4>
+        <p>This project was the <b>2nd part of our dance theme,</b>  in this project we recieved <b>another groups website,</b> had to
+            work upon it and make it <b>responsive for desktop.</b> This projects theme was a <b>bollywood dancing school.</b> 
+            <br><br>
+        <b>My main role </b>for this project was <b>organizing</b> our work, being responsible for <b>some</b> of our <b>design choices</b> and
+    <b>helping everyone with coding.</b>
+            <br> <br>
+            As we recieved the project from the other group, we realised that we had to <b>rework their current design</b> to
+            something new, so we quickly did some <b>brainstorming</b> and got some <b>individual moodboards</b> ready <b>and made our
+        final moodboard.</b> </p>
         <img class="rhythmmood" src="/images/rhythmmood.png" alt="rhythm moodboard">
     </section>
+    <div class="rhythmsplitbar"></div>
+    <div class="arrowcontinue">
+        <div>
+            <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
+        </div>
+    </div>
     <section class="projectsection">
-        <p>We started coding our website, mobile first, with these design decisions in mind. After being done with the
-            mobile version we made breakpoints to further develop the website for dekstop users. As usual we had a final
-            showcase to show of our work.</p>
+        <p>We then started <b>making sketches and wireframes</b> for our website, made some <b>final mockups</b> with our chosen
+            design and name on it and then we <b>started working on the code.</b> As we choose to redo the other groups work
+            from scratch, it meant that this was <b>the first time we had to make a site for both mobile and desktop.</b> 
+            <br> <br>
+            So we
+            got to work on the <b>mobile version</b> making pages that had an <b>"okay" flow,</b> because we <b>hadnt been totally clear
+            on when to use certain elements, colors and fonts.</b> </p>
+        <img class="rhythmimg1" src="/images/rhythmmobile1.png" alt="rhythm mobile pages part 1">
+    </section>
+    <section class="projectsection rhythmfinal">
+        <p>The page <b>I was responsible for</b> making, was <b>our sign up page and our menu.</b> As we continued making our
+            website and <b>started</b> to code <b>the desktop version,</b> we slowly finished the site, but as a result of our
+        <b>miscommunication</b> had some <b>flaws in its cohesiveness.</b>
+        </p>
         <img class="rhythmimg2" src="/images/rhythmdesk2.png" alt="rhythm desktop page">
     </section>
     <a class="tostart" href="index.html">Back to start</a>
