--- a/space.html
+++ b/space.html
@@ -13,18 +13,45 @@
     <h1 class="projecth1 ml12">Outer Travels</h1>
     <section class="projectsection">
         <h2 class="projecth2">Space Project</h2>
-        <h3 class="projecth3">For desktop only</h3>
-        <p>As our first project, Outer Travels was a space themed project, where we had to make a website around some company, that had a product centered around space.</p>
-        <img src="/images/space.png" alt="space outertravels home page">
+        <h3 class="projecth3">Project Leader and Designer</h3>
+        <h4 class="projecth4">For desktop only</h4> 
+        <p>As our <b>first project,</b> Outer Travels was a space themed project, where we had to make a website around a
+            company, that had some <b>product in space.</b> <br> <br> <b>My main role</b> in this project, was being the
+        <b>project leader</b> and with us <b>only being 2 out of the 5 people</b> we were supposed to be <b>in this project,</b> we
+            didn't have many opportunities to do something grand.</p>
     </section>
     <section class="projectsection">
-        <p>We started the project of by brainstorming ways to make a website centered around space. We came up with the idea to make a website where you could choose to travel to planets like a vacation. <br> <br> Being a very small team of 2 we decided to start of by making our pages separately, which ended up not being the normal way to code as we later learned, this also caused some issues in terms of having the same vision for the project.</p>
-        <img src="/images/spacepage2.png" alt="space outertravels mars page">
+        <p>This project was for <b>desktop only,</b> as an <b>introduction to html coding.</b> We started the project of by
+        <b>brainstorming</b> ways to make a website centered around space, we decided to make a <b>dark color palette</b> and try
+            and draw in <b>a lot of black.</b> We came up with the idea to make a website where you could choose to <b>travel to
+            planets like a vacation. </b>
+        </p>
+        <img class="spaceimg1" src="/images/space.png" alt="space outertravels home page">
+        </section>
+        <div class="rhythmsplitbar"></div>
+        <div class="arrowcontinue">
+            <div>
+                <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
+            </div>
+        </div>
+        <section class="projectsection">
+            <p>
+            We then had to <b>make a banner</b> and to not make the website totally black we
+            decided <b>it needed some color.</b> Being a very <b>small team of 2</b> we decided to start of by <b>making our pages
+            separately.</b> We later learnt that <b>it wasn't ideal
+            to make things separately,</b> as it <b>caused some issues</b> in terms of not having the same vision for the project,
+            when making the website.</p>
+            <img class="spacebanner" src="/images/space-banner.jpg" alt="space banner outer travels">
+        <img class="spaceimg2" src="/images/spacepage2.png" alt="space outertravels mars page">
     </section>
-    <section class="projectsection">
-        <p>In the end, we ended up with a project we weren't fully happy with, but we learnt a lot from our mistakes made in this project.</p>
+    <section class="projectsection spacefinal">
+        <p><b>I was responsible for creating our landing page with a banner,</b> differnet planets you could travel to and <b>I made a logo</b>
+            to accompany our site to further sell it as a company. One of the <b>major problems</b> in this project was that we had <b>no
+            experience in coding html in groups</b> and <b>didn't have any tools to use,</b> to make it coding together easier for us. <br>
+            <br> But in the end, we ended up with <b>a project we weren't fully happy with,</b> but we <b>learnt a lot from our
+            mistakes</b> made in this project.</p>
     </section>
-    <a class="tostart" href="index.html">Back to start</a>
+    <a class="tostart" href="index.html">Back to projects</a>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <script src="myjs.js"></script>
 </body>
