--- a/xenos.html
+++ b/xenos.html
@@ -41,6 +41,7 @@
         <div>
             <img src="images/arrowsouth.svg" alt="arrow pointing down to continue">
         </div>
+        
     </div>
     <section class="projectsection">
         <p class="xenosp1">Now that we had a <b>clear vision</b> of what our brand should include, we started on our <b>design</b> and
@@ -65,7 +66,7 @@
         <img class="xenosimg3" src="/images/xenoskampimg.png" alt="xenos final page">
     </section>
 
-    <a href="index.html" class="tostart">Back to start</a>
+    <a href="index.html" class="tostart">Back to projects</a>
 
     <section>
         <div class="xenosbar1"></div>
